--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora sapiente
-      modi provident ipsum accusamus suscipit hic possimus iure sint dolore.
-    </p>
+    <a class="link-arrow" href="#">Learn more</a>
   </body>
 </html>
