--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Fa's website</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -15,5 +15,6 @@
   </head>
   <body>
     <a class="link-arrow" href="#">Learn more</a>
+    <span class="badge badge--primary badge--small">10% OFF</span>
   </body>
 </html>
