--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
       <li class="list__item">Item 1</li>
       <li class="list__item">Item 3</li>
     </ul>
+
+    <span class="icon-container">
+      <svg class="icon">
+        <use xlink:href="image/sprite.svg#settings"></use>
+      </svg>
+    </span>
   </body>
 </html>
