--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
         <use xlink:href="image/sprite.svg#settings"></use>
       </svg>
     </span>
+    <button class="btn btn--primary btn--block btn--outline">Buy now</button>
+    <a href="" class="btn btn--accent btn--block">Buy Now</a>
   </body>
 </html>
