--- a/index.html
+++ b/index.html
@@ -13,21 +13,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <a class="link-arrow" href="#">Learn more</a>
-    <span class="badge badge--primary badge--small">10% OFF</span>
-    <ul class="list list--tick">
-      <li class="list__item">Item 2</li>
-      <li class="list__item">Item 1</li>
-      <li class="list__item">Item 3</li>
-    </ul>
-
-    <span class="icon-container">
-      <svg class="icon">
-        <use xlink:href="image/sprite.svg#settings"></use>
-      </svg>
-    </span>
-    <button class="btn btn--primary btn--block btn--outline">Buy now</button>
-    <a href="" class="btn btn--accent btn--block">Buy Now</a>
-  </body>
+  <body></body>
 </html>
