--- a/index.html
+++ b/index.html
@@ -13,5 +13,29 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="plan">
+      <div class="card card--primary">
+        <header class="card__header">
+          <h3 class="plan__name">Entry</h3>
+          <span class="plan__price">$10</span>
+          <span class="plan__cycle">/month</span>
+          <span class="badge badge--secondary badge--small">10% OFF</span>
+
+          <div class="plan__description"></div>
+            Lorem ipsum dolor sit amet 
+          </div>
+        </header>
+        <div class="card__body">
+          <ul class="list list--tick">
+            <li class="list__item">Item 2</li>
+            <li class="list__item">Item 1</li>
+            <li class="list__item">Item 3</li>
+            <li class="list__item">Item 4</li>
+          </ul>
+          <button class="btn btn--outline but--block">Buy Now</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
